2018-06-21  Paul Thomas  <pault@gcc.gnu.org>

PR fortran/49630
	* resolve.c (resolve_contained_fntype): Change standard ref.
	from F95 to F2003: C418. Correct a spelling error in a comment.
	It is an error for an abstract interface to have an assumed
	character length result.
	* trans-expr.c (gfc_conv_procedure_call): Likewise change the
	standard reference.

2018-06-21  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/49630
	* gfortran.dg/assumed_charlen_function_7.f90: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@261868 138bc75d-0d04-0410-961f-82ee72b054a4